--- a/quant-ph-0605180/qmcARC.tex
+++ b/quant-ph-0605180/qmcARC.tex
@@ -1,5 +1,5 @@
 
-\documentclass[onecolumn,fleqn]{revtex4}
+\documentclass[onecolumn,fleqn, 11pt]{revtex4}
 
 
 \usepackage{ifthen}
@@ -23,8 +23,11 @@
 \renewcommand{\includegraphics}[2][0]{FIGURE}
 \fi
 
+\linespread{1.1}
 \usepackage[colorlinks,linkcolor=blue,urlcolor=blue,bookmarks=true]{hyperref}
-
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
 
 \def\dbar{{\mathchar'26\mkern-12mu d}}
 \newcommand{\vecb}[1]{\overset{{}_{\leftarrow}}{#1}}
@@ -119,9 +122,9 @@
 \newpage 
 \begin{center} 
 \pdfbookmark[1]{#1}{shdA\thesection}
-{\bf {\LARGE #1}} 
+{\bf {\large #1}} 
 \end{center} 
-\addtocontents{toc}{\protect\contentsline{section}{{\Large #1}}{}{}}
+\addtocontents{toc}{\protect\contentsline{section}{{#1}}{}{}}
 \phantomsection
 }
 
@@ -133,7 +136,7 @@
 \setcounter{equation}{0}
 \vspace{5mm}
 \pdfbookmark[2]{#1}{shdB\thesubsection}
-{\bf\LARGE[\thesubsection] \ #1} 
+{\large \bf\thesubsection \,\ #1} 
 \nopagebreak
 \addtocontents{toc}{\protect\contentsline{subsection}{\thesubsection \ \ #1}{\thepage}{shdB\thesubsection.2}}
 \phantomsection
@@ -144,7 +147,7 @@
 {
 \addtocounter{subsubsection}{1}
 \vspace{5mm}
-{\Large\bf $=\!=\!=\!=\!=\!=\;$ [\thesubsection.\thesubsubsection] \ #1}  
+{\bf \thesubsection.\thesubsubsection \ #1}  
 \nopagebreak
 \phantomsection
 }
@@ -182,10 +185,9 @@ at the same level of presentation.
 
 \maketitle 
 
-\drawline
-
 \mpgt[0.48\hsize]{
 
+\small
 \hyperlink{shdA1.1}{\bf Fundamentals I} \\
 
 \bitem The classical description of a particle  \\
@@ -224,7 +226,6 @@ at the same level of presentation.
 \bitem Fermi golden rule \\
 \bitem Markovian master equations \\
 \bitem Cross section / Born \\
-
 \bitem The adiabatic equation \\
 \bitem The Berry phase \\
 \bitem Theory of adiabatic transport (*) \\
@@ -234,13 +235,13 @@ at the same level of presentation.
 }
 \mpgt[0.48\hsize]{
 
+\footnotesize
 
 \hyperlink{shdA5.1}{\bf The Green function approach (*)} \\
 
 \bitem The evolution operator  \\ 
 \bitem Feynman path integral  \\
 \bitem The resolvent and the Green function  \\ 
-
 \bitem Perturbation theory for the resolvent  \\
 \bitem Perturbation theory for the propagator  \\
 \bitem Complex poles from perturbation theory  \\ 
@@ -263,11 +264,9 @@ at the same level of presentation.
 \bitem The dynamics of a two level system \\
 \bitem Fermions and Bosons in a few site system (*) \\
 \bitem Quasi 1D network systems (*) \\
-
 \bitem Approximation methods for $H$ diagonalization \\ 
 \bitem Perturbation theory for $H=H_0+V$ \\
 \bitem Wigner decay, LDOS, scattering resonances \\
-
 \bitem The Aharonov-Bohm effect \\
 \bitem Magnetic field (Landau levels, Hall effect) \\
 \bitem Motion in a central potential, Zeeman \\
@@ -279,7 +278,6 @@ at the same level of presentation.
 
 \bitem Quantization of the EM field \\   
 \bitem Fock space formalism \\
-
 \bitem The Wigner Weyl formalism \\
 \bitem Theory of quantum measurements \\ 
 \bitem Theory of quantum computation \\
@@ -288,14 +286,12 @@ at the same level of presentation.
 }
 
 
-\drawline
-
 
 \newpage
 
 \pdfbookmark[1]{Opening Remarks}{opnrmrk}
 
-\Cn{\LARGE Opening remarks}
+\Cn{\large Opening remarks}
 
 These lecture notes are based on 3 courses in 
 non-relativistic quantum mechanics that are 
@@ -357,8 +353,9 @@ Additional topics are covered by:
 
 [5]  D. Cohen, {\em Lecture Notes in Statistical Mechanics and Mesoscopic}, \href{http://arxiv.org/abs/1107.0568}{arXiv:1107.0568}
 
- 
-\Cn{\LARGE Credits}
+\newpage
+
+\Cn{\large Credits}
 
 The first drafts of these lecture notes were prepared 
 and submitted by students on a weekly basis during~2005. 
@@ -446,7 +443,7 @@ Stanislav Zlatopolsky.
  
 \newpage
 
-{\footnotesize \tableofcontents}
+{ \tableofcontents}
 
 \sheadA{Fundamentals (part I)}
 
