--- a/quant-ph-0605180/qmcARC.tex
+++ b/quant-ph-0605180/qmcARC.tex
@@ -23,8 +23,21 @@
 \renewcommand{\includegraphics}[2][0]{FIGURE}
 \fi
 
-\linespread{1.1}
-\usepackage[colorlinks,linkcolor=blue,urlcolor=blue,bookmarks=true]{hyperref}
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+\linespread{1.0}
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \tolerance=2000
 \hbadness=2000
