--- a/quant-ph-0609163v2/myths.tex
+++ b/quant-ph-0609163v2/myths.tex
@@ -2897,7 +2897,7 @@ why the black-hole entropy is proportional to its surface,
 rather than to its volume.
 Thus, the program of finding a microscopic derivation
 of Eq.~(\ref{S=A2}) is sometimes referred to as  
-``holly grail" of quantum gravity. (The expression ``holly grail"
+``holy grail" of quantum gravity. (The expression ``holy grail"
 fits nice with my expression ``myth".)    
 
 \subsection{Other approaches to black-hole entropy}
@@ -3095,7 +3095,7 @@ that all these myths are, in one way or another, related to the
 central myth in QM according to which objective unmeasured reality
 does not exist. I hope that this review will contribute to a 
 better general conceptual understanding of quantum theory and make readers 
-more cautios and critical before accepting various claims 
+more cautious and critical before accepting various claims 
 on QM as definite facts.  
  
 
