--- a/1211.5627/MQ-formalism-2012.tex
+++ b/1211.5627/MQ-formalism-2012.tex
@@ -24,20 +24,30 @@ bookmarksopenlevel=10
 }
 %\usepackage{amssymb}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-%\usepackage[noBBpl]{mathpazo}
 \linespread{1.1}
-\usepackage[letterpaper, margin=1.3in]{geometry}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \tolerance=2000
+\hbadness=2000
 \usepackage[small]{titlesec}
+
+% different \sum and also fixes underbraces
+\input{../helpers/mnsymbol.tex}
+
+% optional
+
+%\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 %%%%%%%%%%%%% NUMEROTATION %%%%%%%%%%%%%%%%%%%%%%
 \numberwithin{equation}{section} % numerotation des equations par section (amsmath)
-\usepackage{chappg} % numérotation des pages par chapitre
+\usepackage{chappg} % numÃ©rotation des pages par chapitre
 %
 %%%%%%%%%%%%% TABLE DES MATIERES %%%%%%%%%%%%%%%%%%%%%%
-\setcounter{tocdepth}{3} % 3= afficher les subsubsections dans la table des matières
-%\setcounter{tocdepth}{2} % 3= afficher les subsubsections dans la table des matières
-\usepackage{tocloft}  % pour régler les indentations dans la toc
+\setcounter{tocdepth}{3} % 3= afficher les subsubsections dans la table des matiÃ¨res
+%\setcounter{tocdepth}{2} % 3= afficher les subsubsections dans la table des matiÃ¨res
+\usepackage{tocloft}  % pour rÃ©gler les indentations dans la toc
 %\renewcommand{\cftsecindent}{0 em}
 %\renewcommand{\cftsecnumwidth}{1.9 em}
 \renewcommand{\cftsecnumwidth}{2.9 em}
@@ -81,28 +91,28 @@ bookmarksopenlevel=10
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Définition des en têtes et bas de pages via fancyhdr.sty
+% DÃ©finition des en tÃªtes et bas de pages via fancyhdr.sty
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \pagestyle{fancy}
 \fancyhead[LE,RO]{\thepage}
 \fancyhead[RE]{\leftmark}
 \fancyhead[LO]{\rightmark}
 \fancyhead[C]{}
-\fancyfoot[LE]{François David, 2012}
+\fancyfoot[LE]{Fran\c{c}ois David, 2012}
 \fancyfoot[RO]{Introduction to quantum formalism[s]}
 \fancyfoot[RE]{{\small \textsl{Lecture notes\ --\ \today}}}
 \fancyfoot[LO]{IPhT 2012}
 %\fancyfoot[C]{\textcolor{red}{$\heartsuit$}}
 \fancyfoot[C]{}
 \renewcommand{\footrulewidth}{0.4pt}
-% redéfinition du style plain pour les premières pages des chapitres
+% redÃ©finition du style plain pour les premiÃ¨res pages des chapitres
 \fancypagestyle{plain}{
 \fancyhf{}
 \fancyhead[LE,RO]{\thepage}
 \fancyhead[RE]{\leftmark}
 \fancyhead[LO]{\rightmark}
 \fancyhead[C]{}
-\fancyfoot[LE]{François David, 2012}
+\fancyfoot[LE]{Fran\c{c}ois David, 2012}
 \fancyfoot[RO]{Introduction to quantum formalism[s]}
 \fancyfoot[RE]{{\small \textsl{Lecture notes\ --\ \today}}}
 \fancyfoot[LO]{IPhT 2012}
@@ -126,7 +136,7 @@ bookmarksopenlevel=10
 \renewcommand{\footrulewidth}{0.4pt}
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%Fin définition des en têtes et bas de pages via fancyhdr.sty
+%Fin dÃ©finition des en tÃªtes et bas de pages via fancyhdr.sty
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \makeindex
@@ -143,7 +153,7 @@ bookmarksopenlevel=10
 \end{center}
 \vskip 1.cm
 \begin{center}
-{\Large{François David}}
+{\Large{Fran\c{c}ois David}}
 \end{center}
 %\vskip 1.cm
 \begin{center}
@@ -196,7 +206,7 @@ These notes do not cover the historical and philosophical aspects of quantum phy
 \mainmatter
 
 
-%\part{Mécanique quantique et intégrales de chemin}
+%\part{MÃ©canique quantique et intÃ©grales de chemin}
 \input{mq-intro}
 \input{mq-rappels}
 
