--- a/1107.4592v1/Gauge Invariance and the Goldstone Theorem.tex
+++ b/1107.4592v1/Gauge Invariance and the Goldstone Theorem.tex
@@ -37,6 +37,7 @@ bookmarksopenlevel=10
 \hbadness=2000
 \usepackage[small]{titlesec}
 
+\def\textsf{}
 
 %\usepackage{scrtime,scrdate}
 %%---BeGiN---preamble---
@@ -82,6 +83,16 @@ bookmarksopenlevel=10
     Goldstone, Invariance, GHK, 1964, Guralnik, Hagen, Kibble},
   pdfview     = {FitH}
 }
+
+\usepackage{mathpazo}
+\linespread{1.05}
+\urlstyle{same}
+\hypersetup{colorlinks=true}
+\hypersetup{urlcolor=blue}
+\hypersetup{linkcolor=blue}
+\hypersetup{citecolor=blue}
+\sloppy
+
 %% Citing stuff...
 \usepackage{cite}
 %% Units and NiceFrac...
@@ -298,15 +309,15 @@ conclusion.  The basic observation \cite{6} is that non-relativistic
 theories may be imbedded in a relativistic theory by the introduction
 of a time-like vector $\lambda^{u}=(1,0,0,0)$.  A straighforward
 analysis demonstrates that Fourier transform
-
-\[
+\begin{multline*}
   \langle 0 |\left[j_{u}
   (x)~\varphi(y)\right]| 0\rangle = (A + B\epsilon(k^{0}))k_{u}\,
   \delta(k^{2}) + C\, \lambda_{u}
-  \delta^{3}(k)\, \delta(\lambda\cdot k) + [k_{u}(\lambda\cdot
+  \delta^{3}(k)\, \delta(\lambda\cdot k) \\
+  \qquad + [k_{u}(\lambda\cdot
   k) - \lambda_{u}k^{2}]\, D (k^{2}, \lambda\cdot
   k) + E\, \lambda_{u}\, \delta(\lambda\cdot k) \; .
-\]
+\end{multline*}
 
 The term proportional to $C$ is the one on which attention was
 initially focussed. It is most unusual in that it represents an
