--- a/1107.4592v1/Gauge Invariance and the Goldstone Theorem.tex
+++ b/1107.4592v1/Gauge Invariance and the Goldstone Theorem.tex
@@ -14,8 +14,7 @@
   pagesize=auto,
   version=last,
   DIV=calc
-  ]{scrartcl}
-\typearea[current]{calc}
+  ]{article}
 \usepackage[colorlinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
@@ -109,23 +108,8 @@ bookmarksopenlevel=10
 \usepackage{wasysym}
 %\usepackage{latexsym}
 %% Fancy Headers...
-\usepackage{fancyhdr}
-\fancypagestyle{plain}{%
-  \fancyhf{}
-  \fancyfoot[C]{\bfseries\thepage}
-  \renewcommand{\headrulewidth}{0pt}
-  \renewcommand{\footrulewidth}{0pt}
-}
-\pagestyle{fancy}
-\renewcommand{\sectionmark}[1]{\markboth{\thesection.\ #1}{}}
-\renewcommand{\sectionmark}[1]{\markright{\thesection.\ #1}}
-\renewcommand{\headrulewidth}{0.5pt}
-\renewcommand{\footrulewidth}{0pt}
-\newcommand{\helv}{\fontfamily{phv}\fontseries{b}\fontsize{9}{11}\selectfont}
-\fancyhf{}
-\fancyhead[LE,RO]{{\helv \thepage}}
-\fancyhead[LO]{{\helv \rightmark}}
-\fancyhead[RE]{{\helv \leftmark}}
+\pagestyle{plain}
+
 %%%
 %% extensible `=' sign ::  \stakrel{\text{definition}}{\hbox{\equalsfill}}
 \makeatletter
@@ -174,10 +158,7 @@ bookmarksopenlevel=10
 \end{center}
 \bigskip\bigskip\bigskip
 
-\begin{center}
-  \textbf{\textsf{Abstract}}
-\end{center}
-\bigskip
+\begin{abstract}
 \noindent This manuscript was originally created for and printed in the
 ``Proceedings of seminar on unified theories of elementary particles''
 held in Feldafing Germany from July 5 to 16 1965 under the auspices
@@ -186,13 +167,11 @@ Munich. It details and expands upon the Guralnik, Hagen, and Kibble
 paper that shows that the Goldstone theorem does not require
 physical zero mass particles in gauge theories and provides an example through the model which has
 become the template for the unified electroweak theory and a main component of the Standard Model.
+\end{abstract}
 
 
 \newpage
-\begin{center}
-  \textbf{\textsf{Introduction}}
-\end{center}
-\bigskip
+\section{Introduction}
 
 This manuscript was created for and printed in the ``Proceedings of
 seminar on unified theories of elementary particles'' held in Feldafing
@@ -222,13 +201,8 @@ introduction, the acknowledgements and the associated header information, I have
 make this article identical in content to the original complete with
 some potentially confusing notation, typographic errors and (minor) errors in language and physics. I am posting this here because I have been receiving requests for copies since the original proceedings are
 not readily available.
-\bigskip\bigskip
-%---eNd---TitlePage---
 
-\vspace{0.5in}
-\begin{center}
-  \textbf{\textsf{Original Feldafing Conference Paper}}
-\end{center}
+\section{Original Feldafing Conference Paper}
 
 The impressive success of the method of broken symmetries in
 non-relativistic problems have understandably led to the hope that
@@ -402,7 +376,7 @@ it follows that
 \begin{equation*}
 i\, [L_n, \varphi(y)] = n \; .
 \end{equation*}
-In particular, introducing the usual set of states$|a'\rangle$ for which
+In particular, introducing the usual set of states $|a'\rangle$ for which
 $\langle 0|\varphi|0\rangle = n$, it follows that
 
 \begin{equation*}
