--- a/1612.09375/front.tex
+++ b/1612.09375/front.tex
@@ -33,6 +33,7 @@ reader will find careful and extensive explanations.}
 
 % The next command makes the contents fit onto a single page.  
 
+\addtocontents{toc}{\vspace{-4\baselineskip}} 
 \clearpage 
 \thispagestyle{empty}
 \ 
