--- a/0905.0624/kent.tex
+++ b/0905.0624/kent.tex
@@ -7,8 +7,39 @@
 %
 \documentclass[aps,
 %twocolumn,
-pra,epsfig]{revtex4}
+pra,epsfig,12pt]{revtex4}
 %\documentclass[aps,prl,epsfig]{revtex4}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.05}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% different \sum and also fixes underbraces
+\input{../helpers/mnsymbol.tex}
+
+% optional
+
+\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 \usepackage{epsf}
 \usepackage{amsfonts}
@@ -16,7 +47,6 @@ pra,epsfig]{revtex4}
 \usepackage{graphicx}
 \usepackage{color}
 \usepackage{amsmath}
-\usepackage[bookmarksnumbered, bookmarks, breaklinks, linktocpage]{hyperref}
 
 
 \def\eps{\epsilon}
@@ -72,7 +102,7 @@ of evolution, probability, and scientific confirmation}
 31 Caroline Street North, Waterloo, Ontario, Canada N2L 2Y5}
 
 %#############################
-\date{\today}
+\date{4 Jul 2013}
 
 \begin{abstract}
 There is a compelling intellectual case for exploring
@@ -122,7 +152,7 @@ To elaborate on this, let me note some points on which I
 agree with many Everettians.   
 
 First, the Everettian programme had a sensible motivation.  Everett
-asked\cite{everettone}, in effect, whether 
+asked \cite{everettone}, in effect, whether 
 quantum theory really needs to be framed
 in such a way that the evolution of the wave function is governed
 by two different laws: generic unitary evolution together with the
@@ -171,7 +201,7 @@ account of reality.
 
 Now, in fact, I think that the Everett programme fails
 in these ambitions, for reasons explained below.  I am also 
-optimistic\cite{akoneworld}
+optimistic \cite{akoneworld}
 that we can find simpler one-world versions of quantum theory that have 
 all the aforementioned virtues and none of the problems that afflict,
 and I think ultimately doom, the Everett programme.  But I see no way
@@ -236,18 +266,18 @@ Science} \cite{feyerabend})
 
 After fifty years, there is no well-defined, generally agreed set of
 assumptions and postulates that together constitute ``the Everett
-interpretation of quantum theory''.  Far from it: Everett\cite{everettone,everetttwo}, 
-DeWitt\cite{dewitt}, Graham\cite{graham}, Hartle\cite{hartlefreq}, Geroch\cite{geroch}, 
-Deutsch\cite{deutschone}, Deutsch\cite{deutschtwo}, 
-Saunders\cite{saundersvol}, Barbour\cite{barbour} (partly inspired
-by Bell\cite{bellmw}, though Bell's aim was not to inspire), 
-Albert-Loewer\cite{almanyminds}, Coleman\cite{coleman}, 
-Lockwood\cite{lockwood}, Wallace\cite{wallacevolone}, 
-Wallace\cite{wallacevoltwo}, Vaidman\cite{vaidman}, 
-Papineau\cite{papineauvol}, Greaves\cite{greaves}, 
-Greaves-Myrvold\cite{greavesmyrvoldvol},
-Gell-Mann and Hartle\cite{hartlevol}, Zurek\cite{zurekvol} and
-Tegmark\cite{tegmarkvol}, among many others, have offered
+interpretation of quantum theory''.  Far from it: Everett \cite{everettone,everetttwo}, 
+DeWitt \cite{dewitt}, Graham \cite{graham}, Hartle \cite{hartlefreq}, Geroch\ cite{geroch}, 
+Deutsch \cite{deutschone}, Deutsch \cite{deutschtwo}, 
+Saunders \cite{saundersvol}, Barbour \cite {barbour} (partly inspired
+by Bell \cite{bellmw}, though Bell's aim was not to inspire), 
+Albert-Loewer \cite{almanyminds}, Coleman \cite{coleman}, 
+Lockwood\cite{lockwood}, Wallace \cite{wallacevolone}, 
+Wallace \cite{wallacevoltwo}, Vaidman \cite{vaidman}, 
+Papineau \cite{papineauvol}, Greaves \cite{greaves}, 
+Greaves-Myrvold \cite{greavesmyrvoldvol},
+Gell-Mann and Hartle \cite{hartlevol}, Zurek \cite{zurekvol} and
+Tegmark \cite{tegmarkvol}, among many others, have offered
 distinctive and often fundamentally conflicting views on what 
 precisely one needs to assume in order to get the Everett programme off
 the ground, and what precisely an Everettian (or, some say,
@@ -269,20 +299,20 @@ observe different outcomes of quantum experiments should be
 interpreted as equally real.
 
 So, I will not discuss here attempts at ``post-Everettian''
-interpretations like those of Gell-Mann and Hartle\cite{hartlevol} and
-Zurek\cite{zurekvol}, which fall into neither camp, and 
+interpretations like those of Gell-Mann and Hartle \cite{hartlevol} and
+Zurek \cite{zurekvol}, which fall into neither camp, and 
 seem -- despite much critical probing -- unclear on, or uncommitted to 
 taking a stance on, precisely what, if
 anything, in the theory corresponds to objective external reality.
 (Extensive critiques of Gell-Mann and Hartle's approach
 can however be found 
-elsewhere\cite{dowkerkentone, dowkerkenttwo, 
+elsewhere \cite{dowkerkentone, dowkerkenttwo, 
 kentone, kenttwo, kentthree, kentfour}.)
 
 My main focus is on the recent attempts by 
-Wallace\cite{wallacevolone, wallacevoltwo}, Greaves and 
-Myrvold\cite{greavesmyrvoldvol}, and, to a lesser extent, 
-Papineau\cite{papineauvol} and Saunders\cite{saundersvol}, 
+Wallace \cite{wallacevolone, wallacevoltwo}, Greaves and 
+Myrvold \cite{greavesmyrvoldvol}, and, to a lesser extent, 
+Papineau \cite{papineauvol} and Saunders \cite{saundersvol}, 
 to define, analyse and test realist many-worlds 
 interpretations.  These authors offer
 different, and on some points mutually inconsistent, approaches, but
@@ -294,7 +324,7 @@ scientifically adequate version of quantum theory.
 
 Shadowing these discussions is the spectre of the 'many-minds
 interpretation' set out some time ago by Albert and Loewer
-\cite{almanyminds}.  Essentially everyone, including Albert and
+ \cite{almanyminds}.  Essentially everyone, including Albert and
 Loewer, agrees that the many-minds interpretation, while logically
 consistent and in accord with the data, is utterly unsatisfactory,
 since it adds to the Everettian formalism a collection of ad hoc
@@ -305,7 +335,7 @@ quantum theory without adding extra equations or interpretational
 postulates.  So, no one -- certainly no one represented in this 
 volume -- wants to be a many-minder.  And here lies the problem: it seems to
 me (and to others -- see in particular Albert's 
-contribution\cite{albertvol} to this
+contribution \cite{albertvol} to this
 volume) that, at various points in their arguments, Saunders, Wallace,
 Greaves-Myrvold and Papineau tacitly -- and, since they reject the many-minds
 interpretation, illegitimately -- appeal to many-minds intuitions.
@@ -336,7 +366,7 @@ account of probabilistic inferences derived from quantum theory
 -- despite the ingenious recent attempts of
 contributors to this volume.  
 
-Some commentators sympathetic to the Everettian programme\cite{greavesmyrvoldvol, papineauvol} 
+Some commentators sympathetic to the Everettian programme \cite{greavesmyrvoldvol, papineauvol} 
 argue that a double standard is at work here: that criticisms
 of the Everettian programme's attempt to account for the appearance
 of probability can and should equally well be applied to the
@@ -362,7 +392,7 @@ an (alas unknown) suitable set
 selection rule, would also lead naturally to a one-world
 interpretation, in which reality is described by one randomly chosen
 history from the selected set.  And these by now venerable contenders
-certainly don't exhaust the possible options.\cite{akoneworld}
+certainly don't exhaust the possible options \cite{akoneworld}.
 My aim here is not to advocate a specific one-world version or variant
 of quantum theory, or to assess the current state of the art, but
 rather to compare and contrast one-world and many-world accounts of
@@ -815,7 +845,7 @@ Here are some examples of weight-sensitive strategies:
 \item The {\it mean utilitarian} ranks bets according to the value 
 of $\sum_i p_i U_i$.   
 
-\item The {\it Price-Rawlsian}'s dominant concern\cite{pricevol,rawls} 
+\item The {\it Price-Rawlsian}'s dominant concern \cite{pricevol,rawls} 
 is with the welfare
 of their least satisfied future self.   They rank bets first according to 
 $\min  ( U_i )$, and then some list of tie-breaking criteria.   
@@ -893,7 +923,7 @@ variables.\footnote{There are more general possibilities.}
 According to Wallace \cite{wallacevoltwo} and 
 Greaves-Myrvold \cite{greavesmyrvoldvol}, we should 
 {\it define} rational behaviour in a multiverse via axioms 
-generalizing those proposed by Savage\cite{savage} in order
+generalizing those proposed by Savage \cite{savage} in order
 to justify using the standard calculus of probabilities and
 utility functions for rational decisions in a single world
 in which future events are uncertain.   
@@ -1480,7 +1510,7 @@ counting measure?)
 
 A preliminary remark: even postulating a caring measure -- which 
 {\it has} been 
-proposed\cite{papineauvol} in the Everettian literature -- already
+proposed \cite{papineauvol} in the Everettian literature -- already
 seems a very strange manoeuvre.  Physical theories can certainly give 
 reasons for rational agents to perform certain actions if they
 have certain goals.   But what's envisaged here is a theory
@@ -1564,7 +1594,7 @@ to the number of realisations in the class.
 This, if it could be made rigorous, would suggest something resembling 
 the objectively determinist 
 ``momentary minds'' version of Albert-Loewer's many-minds 
-interpretation\cite{almanyminds,bellmw,barbour}, 
+interpretation \cite{almanyminds,bellmw,barbour}, 
 in which the minds exist only instantaneously, with no continuous
 identity extending over time.   This isn't a picture I find easy to take
 seriously.    As I read them, none of the Everettian 
@@ -1572,7 +1602,7 @@ contributors to the present volume would
 wish to defend this account -- and yet it seems very closely aligned with 
 some of their intuitions.  Let me close here by inviting 
 readers to see if they can find a better
-way of rigorously justifying Greaves' gloss:\cite{greaves}
+way of rigorously justifying Greaves' gloss \cite{greaves}:
 
 \begin{quotation} 
 But since we have
@@ -1592,17 +1622,17 @@ that there is less of them).
 
 Two of the most interesting recent developments in the Everettian
 literature, in my view, have been the attempt to argue for
-an intrinsically fuzzy emergent quasiclassical ontology\cite{wallacevolone}
+an intrinsically fuzzy emergent quasiclassical ontology \cite{wallacevolone}
 and (as already discussed) the attempt to reinterpret
 Born weights via a many-worlds version of 
-decision theory\cite{wallacevoltwo}.   
+decision theory \cite{wallacevoltwo}.   
 Interesting, but flawed -- 
 each project has deep problems, and they appear to be based on
 inconsistent premises.   
 
 \subsection{Fuzziness and its limitations}
 
-Granted, as Wallace\cite{wallacevolone} notes, viable higher level scientific 
+Granted, as Wallace \cite{wallacevolone} notes, viable higher level scientific 
 theories can and do, indeed, supervene on more fundamental theories. 
 Objects in those theories need not have any unique and
 precise definition in terms of fundamental concepts: 
@@ -1610,18 +1640,18 @@ there is, indeed, no unique, natural, precise, chemical characterisation
 of a tiger. 
 
 Nonetheless, there is a very strong reason
-for seeking\cite{akcritique} a precise mathematical
+for seeking \cite{akcritique} a precise mathematical
 formulation of the intuition that many branching worlds emerge from 
 unitary quantum theory -- or else a precise mathematical formulation
 of some other structure consistent with Everettian ideas -- 
 namely, that it is not at all clear that,
 without such a formulation, we have a well-defined scientific theory
 to discuss.   (This, it seems to me, is why both  
-Everettians\cite{graham, deutschone} and
-critics\cite{bellmw,almanyminds} have often attempted to find  
+Everettians \cite{graham, deutschone} and
+critics \cite{bellmw,almanyminds} have often attempted to find  
 mathematical structures that might explain the notion of 
 branching.)    The alternative 
-strategy, proposed by Wallace\cite{wallacevolone}, of trying 
+strategy, proposed by Wallace \cite{wallacevolone}, of trying 
 to interpret the implications of 
 a fundamentally mathematical theory in terms of 
 higher level fuzzily defined constructs carries a very obvious
@@ -1644,7 +1674,7 @@ For instance, on this account, do
 distinct mind states necessarily correspond to orthogonal quantum states?
 If so, wouldn't this account necessarily supply us with a 
 preferred orthogonal decomposition of the unitarily evolving 
-quantum state?   And wouldn't this, pace Wallace\cite{wallacevolone}, 
+quantum state?   And wouldn't this, pace Wallace \cite{wallacevolone}, 
 allow a precise definition of a relevant branching structure after all?   
 
 Wallace places great emphasis on the lack of a 
@@ -1688,7 +1718,7 @@ Everything in Wallace's ontology that's
 relevant to rational decisions --- including agents, 
 the quasiclassical branches they inhabit, the branch states, 
 and the branch Born weights, and the distinction between micro-states
-and macro-states --- is intrinsically fuzzily defined\cite{wallacevolone}.   
+and macro-states --- is intrinsically fuzzily defined \cite{wallacevolone}.   
 There is,
 on Wallace's account, no precise fact of the matter about the 
 different quasiclassical states that would result after a bet
@@ -1761,7 +1791,7 @@ is telling us that we should ideally adjust our
 reasoning and their behaviour so as to be consistent with 
 some complete preference ordering.   But how?  There is no 
 natural algorithm available: any choice will involve uncountably
-many arbitrary decisions on pairs of preferences.\cite{savageworry}   
+many arbitrary decisions on pairs of preferences \cite{savageworry}.   
 And why?  Given that no 
 choice of ordering will have any intelligible justification, 
 even after the entire analysis is complete, how can there 
@@ -1806,7 +1836,7 @@ No actual agent in a fuzzy Everettian ontology will ever be able to
 arrive at such an ordering in practice.  Moreover, even if they had infinite 
 computational power, fixing an ordering would require making a very
 complicated ad hoc choice which can have no complete rational justification.  
-Yet without $R1$, the purported derivation of the Born rule\cite{wallacevoltwo} 
+Yet without $R1$, the purported derivation of the Born rule \cite{wallacevoltwo} 
 fails at the first step. 
 
 It's not clear to me that there is any fix for this, but let me
@@ -1836,8 +1866,8 @@ mud.
 
 \subsection{Circularity of the Wallace programme?} 
 
-Zurek\cite{zurekvol} flags another worry about the
-logical relation between the two parts\cite{wallacevolone,wallacevoltwo}
+Zurek \cite{zurekvol} flags another worry about the
+logical relation between the two parts \cite{wallacevolone,wallacevoltwo}
 of Wallace's programme, namely an apparent circularity.   
 Wallace envisages a fuzzy quasiclassical ontology
 arising as the result of mathematical regularities observable within
@@ -1878,8 +1908,8 @@ at the rational decision calculus appropriate to their ontology.
 
 \subsection{Problems with Born-weighted mean utilitarianism} 
 
-Wallace\cite{wallacevoltwo}, developing earlier 
-ideas of Deutsch\cite{deutschtwo}, partly 
+Wallace \cite{wallacevoltwo}, developing earlier 
+ideas of Deutsch \cite{deutschtwo}, partly 
 in response to criticisms (e.g. Ref. \cite{barnumetal}) of 
 the latter, 
 then goes on to argue that from a few simple and purportedly 
@@ -1917,7 +1947,7 @@ no bounds on agents' utility functions.   It seems unlikely that
 any {\it a priori} argument can supply one, since pure rationality 
 imposes no bound on utility functions -- and in practice, for example,
 there seems to be no generally agreed lower bound on the utility cost 
-assigned to the destruction of the Earth or similar catastrophes\cite{akrisk}. 
+assigned to the destruction of the Earth or similar catastrophes \cite{akrisk}. 
 A rigorous real world Born-weight mean utility calculation 
 thus typically requires very careful analysis of small weight branches.   
 In fact, even ensuring that the sum defining the mean 
@@ -2064,7 +2094,7 @@ quantum event, he uses pre- and post-selection, with some standard
 theory of the initial cosmological conditions defining the initial
 state $\rho_i$, and with $\rho_f$ defning the final state, in order to 
 calculate the probabilities of the future worlds corresponding to the
-possible outcomes.\cite{aharonovetal, gmhtwotime}  
+possible outcomes \cite{aharonovetal, gmhtwotime}  .
 He bets as if these were the actual probabilities.  This is not because 
 he believes they are -- he believes in deterministic
 unitary quantum mechanics and so doesn't think probabilities are
@@ -2078,7 +2108,7 @@ future events is conditional on the chosen final state post-selection.
 
 We noted already that branch weight, branch macrostate, branch 
 microstate, and reward are all only fuzzily defined in 
-Wallace's ontology\cite{wallacevolone}, and that 
+Wallace's ontology \cite{wallacevolone}, and that 
 this gives strong reason to doubt Wallace's ordering axiom $R1$.   
 It casts doubt too on whether the availability axioms $A3-A5$ and the 
 rationality axioms $R3$, $R5$ even have a precise definition. 
@@ -2113,7 +2143,7 @@ practical, which suggests that the diachronic
 consistency axiom is less rationally compelling than Wallace argues. 
 
 Another reason to doubt $R2$, it seems to me, 
-is that, pace Wallace's comment\cite{wallacevoltwo} -- 
+is that, pace Wallace's comment \cite{wallacevoltwo} -- 
 \begin{quotation}
 ``In the presence of widespread, 
 generic violation of diachronic consistency, agency in the Everett 
@@ -2140,13 +2170,13 @@ isn't a strong enough assumption to
 prove an interesting decision theoretic representation theorem.
 
 Elga's proposal that Everettians might have a rational preference for 
-future self diversity\cite{wallacevoltwoelga} also seems pertinent
+future self diversity \cite{wallacevoltwoelga} also seems pertinent
 here, as does the case for rationally preferring future 
 society diversity.  (Why {\it not} 
 exploit the scope for political compromise by causing   
 society to evolve in different ways along different branches?) 
 In both cases, it seems to me, 
-contra Wallace\cite{wallacevoltwoelga}, diachronic 
+contra Wallace \cite{wallacevoltwoelga}, diachronic 
 consistency can be rationally violated.  
 I can consistently believe now that it's a good thing that the 
 global state should include future copies of me as a king and a beggar, 
@@ -2158,7 +2188,7 @@ of finding that {\it he} is the beggar outweighs the satisfaction of knowing
 that diversity was achieved.   From my present perspective, the 
 prospect of diversity nonetheless remains appealing. 
 
-As Wallace himself notes earlier in his discussion\cite{wallacetwodictates}: 
+As Wallace himself notes earlier in his discussion \cite{wallacetwodictates}: 
 \begin{quotation}
 $\ldots$ to make a copy of myself and send him off to do a dangerous or 
 disagreeable task -- and $\ldots$ to take actions designed to
@@ -2174,7 +2204,7 @@ Turning briefly to other postulates:
 teleologist strategies, among others.   
 \item[(R4)] Continuity, $R4$, is 
 violated by $x$-percentile utilitarian strategies,
-among others.\footnote{Wallace\cite{wallacevoltwo} notes and discusses 
+among others.\footnote{Wallace \cite{wallacevoltwo} notes and discusses 
 the special case of the Price-Rawlsian.}
 \item[(R5)] Branching indifference, $R5$,
 is violated by Gell-Mann--Hartle aesthete strategies, among others.  
@@ -2232,7 +2262,7 @@ They generally appear, in any case, possible but uncompelling
 guides for rational agents.   Where defined and practical, mean 
 utilitarianism is certainly a rationally defensible strategy, with 
 some mathematically convenient properties.  But, like 
-other critics\cite{pricevol, albertvol}, I am far from persuaded 
+other critics \cite{pricevol, albertvol}, I am far from persuaded 
 that, if I were an Everettian, I should or would be a Born-weighted mean utilitarian.  
 
 \section{Against subjective uncertainty}
@@ -2253,12 +2283,12 @@ think that anything of significance to fundamental physics could turn on such
 questions, as though waving the magic wand of linguistic philosophy over
 a unitarily evolving state vector could somehow conjure up 
 a probability measure and a sample space.\footnote{Incidentally,
-this issue has also divided Everettians: Papineau\cite{papineausu} 
+this issue has also divided Everettians: Papineau \cite{papineausu} 
 and, at one point, Greaves \cite{greavessu},
 have also argued that subjective uncertainty is not to be had in 
 Everettian quantum theory.}   
 
-Consider Wallace's succinct summary\cite{wallaceepiq} of the argument: 
+Consider Wallace's succinct summary \cite{wallaceepiq} of the argument: 
 
 \begin{quotation}
 ``[The argument for subjective uncertainty] may be summarised as
@@ -2357,8 +2387,8 @@ alter the fact that one's making extra assumptions: it merely makes
 them more vaguely expressed.  
 
 Consider\footnote{My remarks here follow
-Albert's lucid discussion\cite{albertvol}.}
-Saunders' exposition\cite{saundersvol}:
+Albert's lucid discussion \cite{albertvol}.}
+Saunders' exposition \cite{saundersvol}:
 
 \begin{quotation}
 Consider a simple example. Alice, we suppose, is about
@@ -2571,13 +2601,13 @@ the idea of such a law isn't consistent with my understanding of
 either physics or rationality -- but the 
 idea is definitely in play in 
 some discussions of many-worlds theories in this volume.  
-Papineau\cite{papineauvol} 
-proposes an axiom of this type, and Greaves-Myrvold\cite{greavesmyrvoldvol}
+Papineau \cite{papineauvol} 
+proposes an axiom of this type, and Greaves-Myrvold \cite{greavesmyrvoldvol}
 consider how to (purportedly) confirm theories including such 
 axioms.   My impression is that many
-Everettians share Greaves' view\cite{greaves} that resorting to such a 
+Everettians share Greaves' view \cite{greaves} that resorting to such a 
 postulate would be, at least, an adequate fall-back 
-should Wallace's\cite{wallacevoltwo} and other
+should Wallace's \cite{wallacevoltwo} and other
 arguments not hold up.   
 
 Here's a point that seems not to have been 
@@ -2641,7 +2671,7 @@ quantum theory}
 Finally, suppose, notwithstanding all the arguments above, 
 that we arrive at an Everettian theory that, while perhaps 
 ad hoc and unattractive, is coherent -- for example, some version of 
-the many-minds interpretation\cite{almanyminds}.  
+the many-minds interpretation \cite{almanyminds}.  
 It is generally believed that, without very advanced technology which
 allows the re-interference of macroscopically distinct branches, 
 such a theory will necessarily be empirically indistinguishable from Copenhagen 
