--- a/0905.0624/kent.tex
+++ b/0905.0624/kent.tex
@@ -7,7 +7,7 @@
 %
 \documentclass[aps,
 %twocolumn,
-pra,epsfig,12pt]{revtex4}
+pra,epsfig,12pt,nofootinbib]{revtex4}
 %\documentclass[aps,prl,epsfig]{revtex4}
 
 \usepackage[colorlinks=true
@@ -913,9 +913,7 @@ variables.\footnote{There are more general possibilities.}
 \subsection{Many-worlds rationality reconsidered in toy models} 
 
 \begin{quotation}
-``If you do what you've always done, you'll get what you always got.''
-
-(variously attributed)
+``If you do what you've always done, you'll get what you always got.'' (variously attributed)
 \end{quotation}
 
 
@@ -2473,20 +2471,20 @@ considering their memory states after the experiment.
 
 Consider first a simple model of 
 an observer, apparatus and quantum state which evolve
-unitarily during an experiment so that \begin{equation} | O_0 > | A_0
-> | Q_0 > \rightarrow \sum_{j=1}^3 a_j | O_j > | A_j > | Q_j > \, ,
+unitarily during an experiment so that \begin{equation} \ket{O_0}\ket{A_0}\ket{Q_0} 
+\rightarrow \sum_{j=1}^3 a_j \ket{O_j}\ket{A_j}\ket{Q_j}\, ,
 \end{equation} where the first state is at time $0$ and the second at
-time $t$, the state $ | A_j > $ is the apparatus state registering
-outcome $j$ and $ | O_j > $ is the observer state having observed the
-apparatus registering outcome $j$.  The agent in state $ | O_0 >$ can
-reasonably say that he will have three successors $ | O_j >$ at time
+time $t$, the state $\ket{A_j}$ is the apparatus state registering
+outcome $j$ and $\ket{O_j}$ is the observer state having observed the
+apparatus registering outcome $j$.  The agent in state $\ket{O_0}$ can
+reasonably say that he will have three successors $\ket{O_j}$ at time
 $t$, corresponding to his three future distinct brain states.
 
 Now consider a more detailed model in which we include an environment,
 and suppose that 
-\begin{equation}\label{modeltwo} | O_0 > | A_0 > |
-Q_0 > | E_0 > \rightarrow \sum_{j=1}^3 \sum_{i=1}^{n_j} 
-a_{ij} | O_j > | A_{ij} > | Q_{j}> | E_{ij} >  \, .
+\begin{equation}\label{modeltwo} \ket{O_0}\ket{A_0}\ket{Q_0}\ket{E_0}
+\rightarrow \sum_{j=1}^3 \sum_{i=1}^{n_j} 
+a_{ij} \ket{O_j}\ket{A_{ij}}\ket{Q_{j}}\ket{E_{ij}}\, .
 \end{equation} 
 Again, the sum over $j$ represents the three possible
 observer states.  The sums over $i$ represent
@@ -2495,9 +2493,9 @@ of terms $n_j$ in each sum depends on an arbitrary choice
 of definition of quasiclassical branch from among many possible 
 definitions.  Since this is supposed to be a model of
 the same experiment, we have that $ \sum_i | a_{ij} |^2 = | a_j |^2 $
-for $j = 1,2,3$.  The agent in state $| O_0 >$ has no unique natural
+for $j = 1,2,3$.  The agent in state $\ket{O_0}$ has no unique natural
 way of characterising the branches.  However, he could consistently view
-each of the three components, containing the state $| O_j >$, $j=1,2,3$,
+each of the three components, containing the state $\ket{O_j}$, $j=1,2,3$,
 as representing precisely one successor.\footnote{
 He is not rationally compelled to accept this view. 
 The point is that in this model successor counting is mathematically 
