--- a/1010.1810/HTT.tex
+++ b/1010.1810/HTT.tex
@@ -30,6 +30,7 @@ bookmarksopenlevel=10
 \usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
 \tolerance=2000
 \hbadness=2000
+\input{../helpers/mnsymbol.tex}
 
 \newcommand{\leftexp}[2]{{\vphantom{#2}}^{#1}{#2}}	
 \renewcommand{\to}{\rightarrow}
