--- a/math-0608420/cohomology.tex
+++ b/math-0608420/cohomology.tex
@@ -5,11 +5,44 @@
 % with HyperTex
 % July 15, 2007 - version with corrections due to May, Baez, Shulman
 
-\documentclass{amsart}
+\documentclass[12pt]{amsart}
 \input{decls}
 \input{periodic}
 \title{Lectures on $n$-Categories and Cohomology}
 \author{Talks by John Baez, Notes by Michael Shulman}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% different \sum and also fixes underbraces
+\input{../helpers/mnsymbol.tex}
+
+% optional
+
+%\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+
+
 \begin{document}
 \maketitle
 
