--- a/1211.2851/simplicial-model.tex
+++ b/1211.2851/simplicial-model.tex
@@ -16,8 +16,8 @@ bookmarksopenlevel=10
 
 %\usepackage{amssymb}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl]{mathpazo}
-\linespread{1.1}
+%\usepackage[noBBpl]{mathpazo}
+%\linespread{1.1}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
 \usepackage[papersize={7in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
 \tolerance=5000
