--- a/1907.02904/hcalg.tex
+++ b/1907.02904/hcalg.tex
@@ -1,4 +1,35 @@
-\documentclass{article}
+\documentclass[12pt]{article}
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+%\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+
+% different \sum and also fixes underbraces
+%\input{../helpers/mnsymbol.tex}
+
+% optional
+
+%\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 
 \usepackage{lipsum} 
@@ -11,8 +42,6 @@
 \title{An Introduction to Higher Categorical Algebra}
 \author{David Gepner}
 
-
-\usepackage[pdfborder=0,pagebackref,colorlinks,citecolor=darkblue,linkcolor=darkgreen,urlcolor=darkblue]{hyperref}
 
 \usepackage{amsmath}
 \usepackage{amscd}
