--- a/1907.02904/hcalg.tex
+++ b/1907.02904/hcalg.tex
@@ -38,7 +38,7 @@ bookmarksopenlevel=10
 
 %\newcommand{\myauthor}{David Gepner}
 %\newcommand{\mytitle}{An Introduction to Higher Categorical Algebra}
-
+\date{5 Jul 2019}
 \title{An Introduction to Higher Categorical Algebra}
 \author{David Gepner}
 
