--- a/1908.10996/Draft.tex
+++ b/1908.10996/Draft.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt]{article}
+\documentclass[12pt]{article}
 %\pdfoutput = 1
 
 \usepackage{amsmath}
@@ -12,10 +12,40 @@
     \definecolor{darkblue}{rgb}{0,0,0.6}
     \definecolor{purple}{rgb}{0.4,.2,0.7}
 \usepackage{comment}
-\usepackage[margin = 2.5cm]{geometry}
     \pagestyle{plain}
 \usepackage{graphicx}
-\usepackage[hyperfootnotes = false, colorlinks = true, linkcolor = darkblue, citecolor = purple]{hyperref}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+
+% different \sum and also fixes underbraces
+\input{../helpers/mnsymbol.tex}
+
+% optional
+
+%\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 \newcommand{\be}{\begin{equation}}
 \newcommand{\bea}{\begin{eqnarray}}
@@ -63,7 +93,7 @@ The black hole interior then becomes part of the entanglement wedge of the radia
 Inspired by this, we propose a new rule for computing the entropy of quantum systems entangled with gravitational systems which involves searching for ``islands'' in determining the entanglement wedge.
 \end{abstract}
 
-\vspace{1in}
+\newpage
 
 \begin{center}
 {\it Dedicated to the memory of Steven S. Gubser}
